# slurry

./: .gitignore  Cargo.toml  README.md
.github/workflows/: linux-test.yml  main.yml
app/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
crates/rust-slurm/src/: main.rs
crates/rust_slurm/: Cargo.toml
crates/rust_slurm/src/: jobs_management.rs  lib.rs  port_forwarding.rs
crates/rust_slurm_cli/: Cargo.toml  README
crates/rust_slurm_cli/src/: main.rs
crates/slurry/: Cargo.toml  README.md
crates/slurry/src/: jobs_management.rs  lib.rs  port_forwarding.rs
crates/slurry/src/data_extraction/: mod.rs  squeue.rs
crates/slurry/src/event_data_extraction/: mod.rs
crates/slurry/src/event_log_extraction/: mod.rs
crates/slurry/src/job_management/: mod.rs
crates/slurry/src/misc/: mod.rs  port_forwarding.rs
crates/slurry_cli/: Cargo.toml
crates/slurry_cli/src/: main.rs
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  AppContext.ts  main.tsx
frontend/src/components/: ConnectionConfigForm.tsx  DropZone.tsx  JobsOverview.tsx  OCELExtractor.tsx  TestComponent.tsx
frontend/src/components/ui/: checkbox.tsx  form.tsx  input-otp.tsx
src/: main.rs
