[package]
name = "vashpc"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vashpc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_slurm = {path = "../../crates/rust_slurm/", features = ["ssh"] }
anyhow = "1.0.89"
chrono = {version = "0.4.38", features = ["serde"] }
#process_mining = {git = "https://github.com/aarkue/rust4pm.git"}
process_mining = {path = "/home/aarkue/doc/projects/rust4pm/process_mining"}
glob = "0.3.1"
structdiff = {version = "0.7.1", features = ["serde", "debug_diffs"] }
tokio = {version = "1",  features = ["io-std"] }
tauri-plugin-dialog = "2"
rayon = "1.10.0"
regex = "1.11.1"
