[package]
name = "rust_slurm"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.89"
chrono = {version = "0.4.38", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
glob = "0.3.1"
structdiff = {version = "0.7.1", features = ["serde","debug_diffs"]}
tokio = {version = "1",  features = ["io-std"], optional = true}
async-ssh2-tokio = { version = "0.8.12", optional = true}
rayon = "1.10"


[features]
default = []
ssh = ["dep:tokio", "dep:async-ssh2-tokio"]
