[package]
name = "slurry"
version = "0.1.7"
edition = "2021"
description = "A crate for managing, analyzing, and creating SLURM jobs for HPC in Rust."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/slurry/"
repository = "https://github.com/aarkue/slurry"


[dependencies]
anyhow = "1.0.89"
chrono = {version = "0.4.38", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
glob = "0.3.1"
structdiff = {version = "0.7.1", features = ["serde","debug_diffs"]}
tokio = {version = "1.43", features = ["full"]}
async-ssh2-tokio = { version = "=0.8.12" , optional = true}
rayon = "1.10"
process_mining = {git = "https://github.com/aarkue/rust4pm.git", optional = true}
regex = {version = "1.11.1", optional = true}

[features]
default = []
ssh = ["dep:async-ssh2-tokio"]
event_log_extraction = ["dep:process_mining", "dep:regex"]



[package.metadata.docs.rs]
all-features = true
